<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.testsfinal.TestsScreen" >

    <ToggleButton
        android:id="@+id/carTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/lorryTB"
        android:text="@string/car"
        android:textOff="@string/car"
        android:textOn="@string/car" />

    <ToggleButton
        android:id="@+id/lorryTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/carTB"
        android:text="@string/lorry"
        android:textOff="@string/lorry"
        android:textOn="@string/lorry" />

    <ToggleButton
        android:id="@+id/motoTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/lorryTB"
        android:layout_below="@+id/lorryTB"
        android:text="@string/motorcycle"
        android:textOff="@string/motorcycle"
        android:textOn="@string/motorcycle" />

    <ToggleButton
        android:id="@+id/pedTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/motoTB"
        android:layout_below="@+id/motoTB"
        android:text="@string/pedestrian"
        android:textOff="@string/pedestrian"
        android:textOn="@string/pedestrian" />

    <ToggleButton
        android:id="@+id/digTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/pedTB"
        android:layout_below="@+id/pedTB"
        android:text="@string/diging"
        android:textOff="@string/diging"
        android:textOn="@string/diging" />

    <EditText
        android:id="@+id/carCommentED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/carTB"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/carTB"
        android:layout_toRightOf="@+id/carTB"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/lorryCommentED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lorryTB"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lorryTB"
        android:layout_toRightOf="@+id/lorryTB"
        android:ems="10" />

    <EditText
        android:id="@+id/motoCommentED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/motoTB"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/motoTB"
        android:layout_toRightOf="@+id/motoTB"
        android:ems="10" />

    <EditText
        android:id="@+id/pedCommentED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pedTB"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/pedTB"
        android:layout_toRightOf="@+id/pedTB"
        android:ems="10" />

    <EditText
        android:id="@+id/digCommentED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/digTB"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/digTB"
        android:layout_toRightOf="@+id/digTB"
        android:ems="10" />

    <Button
        android:id="@+id/lookRecordsBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/digTB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/lookRecords" />

</RelativeLayout>
